--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-*{
+*
+{
     margin: 0;
     padding: 0;
 }
@@ -8,20 +9,24 @@ h1
     text-align: center;
 }
 
-#topsCarousel,
-#hatsCarousel,
-#otherCarousel,
-#albumCarousel,
-#ticketCarousel,
-#posterCarousel
+#storeCarousel
 {
     text-align: center;
     width: 420px;
 }
-body{
+
+body
+{
     padding-top: 112px;
 }
 
-.navbar-main{
+.navbar-main
+{
     font-size: 1.5em !important;
+}
+
+.head-container
+{
+    background-image: url("../images/main-bg.jpg");
+    background-size: cover;
 }
