--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,68 @@
-*{
+*
+{
     margin: 0;
     padding: 0;
 }
 
-body{
+h1
+{
+    text-align: center;
+}
+
+#storeCarousel
+{
+    text-align: center;
+    width: 420px;
+}
+
+body
+{
     padding-top: 112px;
 }
 
-.navbar-main{
+.navbar-main
+{
     font-size: 1.5em !important;
+}
+
+.head-container
+{
+    background-image: url("../images/main-bg.jpg");
+    background-size: cover;
+}
+
+.store
+{
+    display: flex;
+	justify-content: center;
+	width: 100% !important;
+}
+
+.store-button
+{
+    display: block;
+    margin: auto;
+    width: 10em;
+}
+
+.f-input,
+.f-button
+{
+    margin-left: 20px;
+}
+
+.navbar-toggler-icon{
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.title-container{
+    background-image: url("../images/main-bg.jpg");
+}
+
+.logo-img{
+    max-width: 700px;
+}
+
+.GBNF-img{
+    max-width: 500px;
 }
