--- a/css/style.css
+++ b/css/style.css
@@ -112,3 +112,14 @@ body
     margin: 0%;
     padding: 0%;
 }
+
+
+h5 strong
+{
+    font-size: larger;
+}
+
+.musicCards
+{
+    margin-bottom: 10px;
+}
