--- a/css/style.css
+++ b/css/style.css
@@ -104,11 +104,21 @@ body
     margin: 0;
     padding: 0;
     background-image: url(../images/GBNF-bg.png);
-    background-size: 100vw;
+    background-size: cover;
+    background-repeat: no-repeat;
+    flex-direction: column;
 }
 
 .rows{
     min-width: 100%;
     margin: 0%;
     padding: 0%;
+}
+
+.store-container{
+    min-width: 100%;
+    margin: 0;
+    padding: 0;
+    background-image: none;
+    flex-direction: column;
 }
