--- a/css/style.css
+++ b/css/style.css
@@ -122,3 +122,12 @@ body
     background-image: none;
     flex-direction: column;
 }
+
+.tour-container{
+    min-width: 100%;
+    margin: 0;
+    padding: 0;
+    background-image: url("../images/concert.png");
+    background-size: cover;
+    flex-direction: column;
+}
