--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@ body
 h5 strong
 {
     font-size: 3em;
+    text-decoration: overline;
 }
 
 .musicCards
@@ -151,4 +152,19 @@ h5 strong
 .tour-container2
 {
     flex-direction: column;
+}
+
+.card-header, .card-footer
+{
+    font-size: 2em;
+}
+
+.albumEmphasis
+{
+    text-decoration: underline;
+}
+
+.card-text
+{
+    font-size: 1.25em;
 }
