--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,6 @@ body
 h5 strong
 {
     font-size: 3em;
-    text-decoration: overline;
 }
 
 .musicCards
@@ -172,4 +171,39 @@ h5 strong
 .booking-body
 {
     padding-top: 0;
+}
+
+footer
+{
+    text-align: center;
+}
+
+footer h3
+{
+    text-decoration: underline;
+    font-size: 2em;
+}
+
+.flex-container 
+{
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.flex-container img
+{
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.flex-container-2
+{
+    text-align: center;
+}
+
+.service
+{
+    margin-top: 10px;
+    display: flex;
 }
